--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
-* {
-    border: solid 1px red;
+body {
+    color: #333;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+}
+
+.container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+.container h1
+{
+    font-size: 20px;
+
 }
