--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body {
     font-size: 24px;
 }
 
+
+#cabecera
+{
+    background: #33A;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+}
 .container
 {
     width: 70%;
@@ -20,4 +30,10 @@ body {
 {
     font-size: 20px;
 
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
