--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
     font-size: 24px;
